GeneWeb version 3.08
--------------------

* Documentation:
  - [21 Aug 00] Added an entry in the FAQ about people having "?" (question
    mark) as first name and/or surname.

GeneWeb version 3.07
--------------------

* New feature
  - [18 Aug 00] Added a program "gwtp" (CGI) to upload and download GeneWeb
    data bases in a site which accomodate some (undocumented program for the
    moment).

* Distribution
  - [18 Aug 00] Create files named README.htm and LISEZMOI.htm instead
    of README.txt and LISEZMOI.txt.

* GeneWeb Service/CGI (gwd)
  - [16 Aug 00] In personal pages, does not display the age at death
    if less than one year and undefined month/day (it displayed "age at
    death: birth"!)
  - [14 Aug 00] In personal pages, sources are now printed, even for
    non friends, non wizards.
  - [11 Aug 00] In first names by alphabetic order for a given surname, now
    always specify the parents' names.
  - [09 Aug 00] Fixed a problem of missing space after "married to" in
    descendants page (did not happen with all browsers).
  - [30 Jul 00] Added an option "-conn_tmout" (available only under
    Unix) to specify a connection timeout for one request. If the request
    has not terminated after this time, it is killed. Default is 120s.
  - [30 Jul 00] Contribution from Ludovic Ledieu: changed displaying
    of ancestors trees: 1/ clicks on persons fall on their personal pages
    (no more for navigation) 2/ vertical bars are clickable to navigate 3/
    no more bars for missing ancestors.
  - [28 Jul 00] Fixed problem in images displaying in personal pages
    and in trees. Sometimes the image was "broken", its URL being
    incorrect. Details:
    * This happened in case of local image (field "image" filled in "person"
      form), and when the type was not among the recognized types
      (i.e. presently "gif", "jpeg", "png"): in these conditions, the URL
      for the image was incorrect.